# knowledge-assistant-rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pr-check.yml
data/starter_corpus/: faq-access-mfa.md  faq-billing-invoices.md  faq-security-api-keys.md  guide-access-sandbox.md  guide-deploy-feature-flags.md  guide-deploy-preview.md  guide-integrations-slack.md  guide-integrations-webhooks.md  policy-access-service-accounts.md  policy-access-sso.md  policy-billing-disputes.md  policy-billing-overages.md  policy-deployments-maintenance-window.md  policy-security-data-retention.md  release-note-billing-april-2026.md  release-note-integrations-march-2026.md  runbook-access-emergency-admin.md  runbook-billing-invoice-correction.md  runbook-deploy-hotfix.md  runbook-deploy-rollback.md  runbook-integrations-github-sync.md  runbook-security-incident.md
src/knowledge_agent/: __init__.py  config.py  runtime.py
src/knowledge_agent/agents/: core_graph.py  guardrails.py  model_gateway.py  prompts.py  state.py
src/knowledge_agent/api/: app.py
src/knowledge_agent/cli/: main.py
src/knowledge_agent/eval/: dataset.jsonl  metrics.py  runner.py
tests/agent_graph/: test_agent_graph_contract.py
tests/api/: test_api_contract.py
tests/bootstrap/: test_bootstrap.py
tests/cli/: test_cli_contract.py
tests/eval/: test_eval_contract.py
tests/indexing/: test_indexing_contract.py
tests/ingestion/: test_ingestion_contract.py
tests/retrieval/: test_retrieval_contract.py
(+8 files in other folders)
