[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-agent"
version = "0.1.0"
description = "Knowledge-base RAG service with grounded answers and source citations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "typer>=0.12.5",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "PyYAML>=6.0.2",
  "qdrant-client>=1.11.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "langgraph>=0.2.35",
  "langsmith>=0.1.129",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "ipykernel>=6.29.0",
  "jupyterlab>=4.2.0",
  "nbformat>=5.10.4",
  "pytest>=8.3.2",
  "ruff>=0.6.8",
]

[project.scripts]
knowledge-agent = "knowledge_agent.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
